[gd_scene load_steps=3 format=3 uid="uid://cqemdfm1k5ika"]

[ext_resource type="Script" uid="uid://d4hn4k4j1wx6g" path="res://menus/pause_menu/pause_menu.gd" id="1_jwttc"]
[ext_resource type="PackedScene" uid="uid://7q68kbobko43" path="res://menus/options_menu.tscn" id="1_s0u37"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_jwttc")

[node name="DimOverlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -37.5
offset_top = 15.0
offset_right = 37.5
offset_bottom = 33.0
grow_horizontal = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 18
text = "Paused"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -20.0
offset_right = 36.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 3

[node name="RestartRun" type="Button" parent="Control/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(72, 10)
layout_mode = 2
size_flags_horizontal = 4
text = "Restart Run"

[node name="Options" type="Button" parent="Control/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(72, 10)
layout_mode = 2
size_flags_horizontal = 4
text = "Options"

[node name="Save" type="Button" parent="Control/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(72, 10)
layout_mode = 2
size_flags_horizontal = 4
text = "Save"

[node name="SaveAndQuit" type="Button" parent="Control/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(72, 10)
layout_mode = 2
size_flags_horizontal = 4
text = "Save and Quit"

[node name="OptionsMenu" parent="." instance=ExtResource("1_s0u37")]
visible = false

[node name="Back" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 14.0
grow_horizontal = 0
text = "Back"

[connection signal="pressed" from="Control/VBoxContainer/RestartRun" to="." method="_on_restart_run_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/SaveAndQuit" to="." method="_on_save_and_quit_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
